# fem_structure_preparation

./: CMakeLists.txt  options  readme  ternary_disks_mc.cpp
src/: convex_polygon.hpp  figures_collection.hpp  options.hpp  point.hpp  polygonal_cylinder.hpp  utils.hpp
